# django-cloud-tasks

./: .codeclimate.yml  .coveragerc  .gitignore  .pylintrc  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  setup.cfg  sitemap.xml
.github/workflows/: docs.yaml  main.yaml  publish.yaml  release.yaml  updater.yaml  validate-docs.yaml
django_cloud_tasks/: __init__.py  apps.py  client.py  context.py  exceptions.py  factories.py  field.py  helpers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
django_cloud_tasks/management/commands/: __init__.py  initialize_publishers.py  initialize_subscribers.py  initialize_tasks.py  schedule_tasks.py
django_cloud_tasks/middleware/: __init__.py  headers_context_middlware.py  pubsub_headers_middleware.py
django_cloud_tasks/migrations/: 0001_initial.py  0002_alter_routine_status_alter_routine_task_name.py  0003_alter_routine_max_retries_and_more.py
django_cloud_tasks/tasks/: __init__.py  helpers.py  periodic_task.py  publisher_task.py  routine_task.py  subscriber_task.py  task.py
django_cloud_tasks/tests/: factories.py  tests_base.py
docs/: CNAME  headers.md  index.md  on_demand_tasks.md  pubsub.md  scheduled_tasks.md  task_field.md
headers/: index.html
on_demand_tasks/: index.html
pubsub/: index.html
sample_project/: manage.py  settings.py  urls.py
sample_project/another_app/: apps.py
sample_project/another_app/tasks/: __init__.py
sample_project/another_app/tasks/deep_down_tasks/: one_dedicated_task.py
sample_project/sample_app/: apps.py  signals.py  tasks.py  views.py
sample_project/sample_app/migrations/: 0001_initial.py
sample_project/sample_app/tests/: tests_app.py  tests_base_tasks.py  tests_commands.py  tests_models.py  tests_publisher_tasks.py  tests_tasks.py  tests_views.py
sample_project/sample_app/tests/tests_models/: tests_pipeline_models.py  tests_routine_models.py  tests_routine_state_machine_models.py
sample_project/sample_app/tests/tests_tasks/: tests_routine_executor_tasks.py  tests_routine_reverter_tasks.py  tests_tasks.py
sample_project/sample_app/tests/tests_views/: tests_publisher_task_views.py  tests_subscriber_task_views.py  tests_task_views.py
scheduled_tasks/: index.html
search/: search_index.json
task_field/: index.html
