[tool.poetry]
name = "django-google-cloud-tasks"
version = "2.2.2"
description = "Async Tasks with HTTP endpoints"
authors = ["Joao Daher <joao@daher.dev>"]
packages = [
    { include = "django_cloud_tasks" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = ">=4,<5"
gcp-pilot = {version = "*", extras = ["tasks", "pubsub"]}


[tool.poetry.dev-dependencies]
ruff = "*"
black = "*"
coverage = "*"
factory-boy = "*"
freezegun = "*"
safety = "*"


[tool.black]
line-length = 120
target-version = ['py311']


[tool.ruff]
line-length = 120
target-version = "py311"


[tool.coverage.run]
branch = true
source = ["django_cloud_tasks"]
omit = ["*/manage.py", "*/settings.py", "*/wsgi.py"]


[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
